# cta-quant-system

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: config.example.yaml
docs/: phase2_plan_v1.md
reports/: MomentumStrategy_RB_20260129_190826_equity.csv  MomentumStrategy_RB_20260129_190826_report.txt  MomentumStrategy_RB_20260129_190826_trades.csv
scripts/: download_rb_5min.py  run_backtest.py
src/: __init__.py
src/backtest/: __init__.py  engine.py  metrics.py  report.py
src/data/: __init__.py  data_processor.py  minute_data.py  tushare_client.py
src/execution/: __init__.py
src/risk/: __init__.py
src/strategy/: __init__.py  position.py  signal_gen.py
src/strategy/factors/: __init__.py  momentum.py
src/utils/: __init__.py
tests/: __init__.py
